Changelog
=========


4.0-dev - (unreleased)
----------------------

* Bugfix: Fixed publishing dates on the portlets under Theme Centre [szabozo0 #4440]

* Change: Reactivated Products.PloneHelpCenter [szabozo0 #4430]

* Change: Removed the @@proxy view, using python:path() instead
  [tiberich #4257]

* Feature: Added upgrade steps
  [voineali #4392]

* Feature: Plone 4.x compatible release
  [ghicaale #4257]


1.6 - (2011-04-01)
------------------

* Cleanup: Removed PloneRSSPortlet [voineali #4169]

* Bug fix: Added translation domain to ZCML files [voineali #4139]


1.5 - (2011-03-09)
------------------

* Change: clean up package of pyflakes compiler warnings [ichimdav #4141]

* Change: clean up package of pylint violations [ichimdav #4140]


1.4 - (2011-03-01)
------------------

* Cleanup: Removed Product PloneRDFCalendar & RDFEvent type [ichimdav #2931]

* Cleanup: Removed Product CMFLinkChecker [batradav #3219]


1.3 - (2011-02-01)
------------------

* Bug fix: Return NotFound when feed id is not specified for list_feed view [tiberich #3893]


1.2 - (2010-11-26)
------------------

* Bug fix: don't fail on indicators theme if the faceted query can't be found [tiberich #3893]


1.1 - (2010-11-10)
------------------

* Bug fix: don't fail if a promotion doesn't have any themes set #3829 [vincisas]


1.0 - (2010-09-06)
------------------

* Feature: Added new faceted nav portlet. Replace old indicators RSS portlets with new one. [thuliper #3547]


0.9 - (2010-06-16)
------------------

* Merged subfolder_view and dc_view [thuliper, #3372]


0.8 - (2010-05-18)
------------------

* Fixed bug where listing_url (URL adapter) was not used for dc_view sub items [thuliper]


0.7 - (2010-05-10)
------------------

* Fixed bug where ATLink would point to object URL instead of URL adapters listing_url [thuliper]

* Fixed bug where some non-folderish items would disappear in dc_view [thuliper, #3303]


0.6 - (2010-05-07)
------------------
