@@ -149,5 +149,14 @@
       permission="zope.Public"
       allowed_interface=".interfaces.IDCViewLogic"
       />
+  
+  <!-- themes portlet now as viewlet shown as tags below the title -->
+  <browser:viewlet
+        name="eea.themestags"
+        class=".viewlets.ThemesTagsViewlet"
+        manager="plone.app.layout.viewlets.interfaces.IBelowContentTitle"
+        layer="eea.design.browser.interfaces.IEEACommonLayer"
+        permission="zope2.View"
+        />
 
 </configure>
