@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<object>
+    
+    <!-- plone.belowcontenttitle order -->
+    <order manager="plone.belowcontenttitle" skinname="*"
+        based-on="Plone Default">
+        <viewlet name="eea.themestags"
+            insert-before="*"/>
+    </order>
+    <!-- end plone.belowcontenttitle order -->
+   
+</object>
