@@ -16,14 +16,6 @@
     width: 48%;
 }
 
-#themes-object {
-   float: right;
-   clear: right;
-   width: 17em;
-   margin-right: 0;
-   padding: 7px;
-}
-
 #themes-related dt img {
    float: left;
    margin: 0 0.5em 0.2em 0;
