@@ -5,6 +5,8 @@ Changelog
 4.0-dev - (unreleased)
 ----------------------
 
+* Change: #4206, #4458 Made the portlet themes as viewlet and registered below content title. css cleanup. [demarant]
+
 * Bugfix: Fixed publishing dates on the portlets under Theme Centre [szabozo0 #4440]
 
 * Change: Reactivated Products.PloneHelpCenter [szabozo0 #4430]
